@@ -72,6 +72,7 @@ Fixes:
    was @hide. Suggested by Minion@M*U*S*H [GM]
  * @pemit <name>= would show nospoof info if <name> was set Nospoof. Now,
    it does nothing at all. [MG]
+ * The connect screen can now contain ANSI color. Patch by Mercutio.
 
 Tools:
  * New script in utils/ for searching change logs: grep-cl.pl [SW]
